[package]
name = "slater"
description = "Slater online server: read-only Bolt/Cypher over the immutable on-disk graph format, bounded resident memory."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "slater"
path = "src/main.rs"

[dependencies]
graph-format.workspace = true
slater-scalar.workspace = true
slater-delta.workspace = true
hs-utils.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
tokio.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true
argon2.workspace = true
# Wipe the at-rest master key (and the hex text it was read from) on drop.
zeroize.workspace = true
rayon.workspace = true
wide.workspace = true
clap.workspace = true
pest.workspace = true
pest_derive.workspace = true
regex.workspace = true
rand.workspace = true
chrono = { workspace = true, features = ["clock"] }

# jemalloc is the global allocator only on Linux (wired in main.rs); macOS and other
# dev targets keep the system allocator.
[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator.workspace = true

[features]
default = []
# Enable the S3 / object-store data backend (forwards to graph-format).
s3 = ["graph-format/s3"]
# Enable the GCS data backend (forwards to graph-format).
gcs = ["graph-format/gcs"]
# Expose the `testgen` fixture builder to benchmarks (off by default; not shipped
# in a normal build). Required by the `delta_overlay` read-regression bench.
testkit = []
# Compile the write-resolve perf/memory micro-bench
# (`bench_resolve_business_key_over_the_segment`). Off by default so the bench —
# and its Linux-only `/proc/self/{statm,status}` RSS sampling — is never built or
# run by a normal `cargo test`; enable with `--features perf-mem`.
perf-mem = []

[lints.rust]
# The server is entirely free of `unsafe`: heap return to the OS is now jemalloc's
# job (see main.rs / the tikv-jemallocator dep), so the former libc `malloc_trim`
# FFI is gone and the only remaining unsafe lives inside the audited allocator crate.
unsafe_code = "forbid"

[dev-dependencies]
criterion.workspace = true
rcgen.workspace = true

[[bench]]
name = "vector_knn"
harness = false

# The `slater dump` round-trip e2e uses the `testgen` fixture (testkit-gated), so
# it only compiles with the feature on; `#[ignore]` besides. Run:
# `cargo test -p slater --features testkit --test dump_roundtrip -- --ignored`.
[[test]]
name = "dump_roundtrip"
required-features = ["testkit"]

# The full-write-clauses live Bolt round-trip drives every write clause over a real
# server + real `slater-build` consolidation off the `testgen` fixture (testkit-gated);
# `#[ignore]` besides. Run: `SLATER_BUILD_BIN=$CARGO_TARGET_DIR/debug/slater-build
# cargo test -p slater --features testkit --test writable_bolt_roundtrip -- --ignored`.
[[test]]
name = "writable_bolt_roundtrip"
required-features = ["testkit"]

# The same live Bolt write-clause round-trip against a prebuilt 91.6M-node wikidata
# generation as the starting core (env-driven, `#[ignore]`, testkit-gated) — the scale
# companion to `writable_bolt_roundtrip`. Run: `SLATER_WD91M_DIR=… SLATER_WD91M_GRAPH=…
# cargo test -p slater --features testkit --test wd91m_write_smoke -- --ignored`.
[[test]]
name = "wd91m_write_smoke"
required-features = ["testkit"]

# Proves the writable layer's empty-delta read path is a zero-cost pass-through:
# A/Bs a node-materialisation loop over a bare `Generation` vs a `MergedView` with
# an empty delta. Run: `cargo bench -p slater --features testkit --bench delta_overlay`.
[[bench]]
name = "delta_overlay"
harness = false
required-features = ["testkit"]

# Phase 8 read-amp harness: measures point-lookup / 2-hop / label-scan / count read
# amplification (cold-cache block misses, base + segment) and warm latency over the same
# graph folded to 0/2/4/8 upper segments. Proves an untouched read stays flat as the stack
# grows. Run: `cargo bench -p slater --features testkit --bench segment_read_amp`.
[[bench]]
name = "segment_read_amp"
harness = false
required-features = ["testkit"]

# Read-amp correctness parity over a real object store (MinIO/S3, fake-gcs-server/GCS). Both
# arms skip unless their endpoint env var is set. The S3 arm needs `s3`, the GCS arm `gcs`; the
# file builds with just `testkit` (store arms cfg'd out). See the file header for run commands.
[[test]]
name = "object_store_readamp"
required-features = ["testkit"]

# ── FreshDiskANN vector write-ladder performance suite (HIK-120) ──────────────────────────────
# All five drive the vector primitives (rwvamana / vamana / vamana_merge / vamana_delete / the
# RW-index CALL path) at dim 768; deterministic splitmix64 fixtures; release (criterion). See
# docs/PERF-REPORT.md for the synthesised numbers + 91.6M extrapolations.

# 1. RW-index kill-switch A/B: KNN latency ON (graph walk) vs OFF (per-query delta brute force)
# swept over delta size, end-to-end through `db.idx.vector.queryNodes`. Run:
# `cargo bench -p slater --features testkit --bench vector_rwindex`.
[[bench]]
name = "vector_rwindex"
harness = false
required-features = ["testkit"]

# 2. recall@10 vs exact brute force over the live set, per metric (cosine/L2/dot, unequal norms),
# at the ladder's index kinds (delta RwVamana / base vamana / consolidated / merged). Prints
# recall, not timing. Run: `cargo bench -p slater --features testkit --bench vector_recall`.
[[bench]]
name = "vector_recall"
harness = false
required-features = ["testkit"]

# 3. ms/insert for one `RwVamana` insert (dim 768, R=32, L=64). Confirms ~2 ms/insert. Run:
# `cargo bench -p slater --features testkit --bench vector_insert`.
[[bench]]
name = "vector_insert"
harness = false
required-features = ["testkit"]

# 4. block/node-fetch reads per KNN query, lazy (holes) vs consolidated, at iso-recall (fixed
# recall target, per-variant beam width). Sweeps dead fraction. Prints reads/query, not timing.
# Run: `cargo bench -p slater --features testkit --bench vector_delete_io`.
[[bench]]
name = "vector_delete_io"
harness = false
required-features = ["testkit"]

# 5. StreamingMerge rewrite throughput: fast path (hard-link, ~instant) vs slow path (decode-once
# sequential rewrite, MiB/s, post-HIK-119). Run:
# `cargo bench -p slater --features testkit --bench streaming_merge`.
[[bench]]
name = "streaming_merge"
harness = false
required-features = ["testkit"]

# 6. MIPS (Dot) recall@10 vs INDEPENDENT exact brute-force inner-product ground truth, on a
# reproducible fixture whose norm distribution is the MIPS stressor (log-normal / heavy-tailed
# Pareto / legacy uniform control). The deliverable-1 yardstick for HIK-137. Prints recall + the
# fixture's norm spread. Run: `cargo bench -p slater --features testkit --bench mips_recall`.
[[bench]]
name = "mips_recall"
harness = false
required-features = ["testkit"]

# 7. HIK-137 phase-1 SPIKE: a bench-only IP-native (MIPS) navigator — an IP proximity graph
# (top-R-by-IP / s-Delaunay selection, highest-norm entry) walked by EXACT inner product (no PQ,
# no augmentation) — measured against the same deliverable-1 brute-force IP ground truth as bench
# 6, on all three norm distributions, beside the current augmented base index and an angular-seed
# variant. Throwaway measurement (no ladder/manifest/format touched). Run:
# `cargo bench -p slater --features testkit --bench ipnsw_spike`.
[[bench]]
name = "ipnsw_spike"
harness = false
required-features = ["testkit"]

# 8. HIK-137 phase-2 CHECKPOINT: PQ-under-IP. Navigates the same IP-native graph as bench 7, but by
# the IP-ADC PQ estimate (`AdcTable::new_ip`, codebook trained on RAW vectors, no augmentation)
# instead of exact IP — the last recall unknown before the FORMAT_VERSION work. Measured against
# the deliverable-1 brute-force IP ground truth on all three distributions, beside the augmented
# baseline and the exact-IP graph ceiling. Run:
# `cargo bench -p slater --features testkit --bench ipnsw_pq_checkpoint`.
[[bench]]
name = "ipnsw_pq_checkpoint"
harness = false
required-features = ["testkit"]

# 9. HIK-137 phase-2 base-build END TO END: the production IP-native base rung written to disk
# (build_vamana_ip + raw .vamana + IP codebook .pq) and read back through the real
# VamanaReader/PqReader + beam_search with AdcTable::new_ip — the same machinery the server's
# InnerProduct read path uses — beside the augmented on-disk base index (the current production Dot
# path). Recall@10 vs the deliverable-1 brute-force IP ground truth on all three distributions. Run:
# `cargo bench -p slater --features testkit --bench ipnsw_base_e2e`.
[[bench]]
name = "ipnsw_base_e2e"
harness = false
required-features = ["testkit"]

# 9. HIK-137 phase-3 LADDER: recall@10 for every IP-native ladder rung — T0 (RwVamana delta), T2
# (sealed segment), T4b (streaming-merge inserts), T4a (delete re-prune / holes) — end to end
# through the real writers/readers, vs the deliverable-1 brute-force IP ground truth on all three
# norm distributions. The proof that the ladder PRESERVES the base rung's recall for Dot. Run:
# `cargo bench -p slater --features testkit --bench ipnsw_ladder_e2e`.
[[bench]]
name = "ipnsw_ladder_e2e"
harness = false
required-features = ["testkit"]
